<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dolly_tests_new</name>
  <version>0.4.0</version>
  <description>
    New tests for Dolly
  </description>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ament -->
  <depend>ament_cmake_gtest</depend>
  <depend>ament_lint_auto</depend>
  <depend>ament_lint_common</depend>

  <!-- dolly -->
  <depend>dolly_follow</depend>
  <depend>dolly_ignition</depend>

  <!-- ROS launch -->
  <depend>launch_testing</depend>
  <depend>ros2launch</depend>

  <!-- gazebo -->
  <depend>ros_ign_bridge</depend>
  <depend>ignition-gazebo6</depend>

</package>
